Som content changes and fixed link style issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,7 +526,7 @@ html {
   max-width: 100%;
   margin-bottom: 24px;
 }
-.post-body a {
+.post-body a, .page-body a {
   border-bottom: 1px dotted;
 }
 .page-body img {
