--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,6 +529,9 @@ html {
 .post-body a, .page-body a {
   border-bottom: 1px dotted;
 }
+.post-title a {
+  text-decoration: none;
+}
 .page-body img {
   max-width: 100%;
   margin-bottom: 24px;
