Fixed insta link problem

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
                 </a>
             </li>{% endif %}
             {% if site.owner.instagram %}<li>
-                <a href="http://instagram.com/{{ site.owner.instagram }}" data-toggle="tooltip" title="{{ site.owner.name}} on Instagram" target="_blank">
+                <a href="{{ site.owner.instagram }}" data-toggle="tooltip" title="{{ site.owner.name}} on Instagram" target="_blank">
                     <i class="icon-instagram"></i>
                 </a>
             </li>{% endif %}
