--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,16 @@
                     <i class="icon-facebook"></i>
                 </a>
             </li>{% endif %}
+            {% if site.owner.trainerroad %}<li>
+                <a href="{{ site.owner.trainerroad }}" data-toggle="tooltip" title="{{ site.owner.name}} on TrainerRoad" target="_blank">
+                    <img src="images/trainerroad-icon-bw.png" alt="">
+                </a>
+            </li>{% endif %}
+            {% if site.owner.strava %}<li>
+                <a href="{{ site.owner.strava }}" data-toggle="tooltip" title="{{ site.owner.name}} on STRAVA" target="_blank">
+                    <img src="images/strava-logo-50px-icon-bw.png" alt="">
+                </a>
+            </li>{% endif %}
             {% if site.owner.google_plus %}<li>
                 <a href="{{ site.owner.google_plus }}" data-toggle="tooltip" title="{{ site.owner.name}} on Google+" target="_blank">
                     <i class="icon-google-plus"></i>
