--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,7 @@ html {
   width: 100%;
   height: 60%;
   padding: 24px 0;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
   box-sizing: border-box;
 }
 #masthead.align-left {
@@ -464,6 +464,13 @@ html {
 .brand img {
   max-height: 120px;
 }
+div.lang a {
+  border-bottom: 0;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.35);
+  border-radius: 50%;
+}
+
 /* - Blog title and description - */
 .blog-title {
   font-size: 36px;
@@ -484,6 +491,11 @@ html {
   position: relative;
   z-index: 1;
 }
+#main.content.float {
+  top: -30px;
+  z-index: 10;
+  height: 6px;
+}	
 @media (max-width: 480px) {
   .brand img {
     max-height: 60px;
@@ -586,7 +598,7 @@ html {
 /* FOOTER */
 /* ------ */
 #footer {
-  margin-top: 72px;
+  /* margin-top: 72px; */
   padding: 124px 0 72px;
   position: relative;
   width: 100%;
