--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
             </li>{% endif %}
         </ul>
             <div>
-                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.
+                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; email: {{ site.owner.email }} &bull; tel: {{ site.owner.tel }} 
             </div>
             <ul class="menu-items">
 			{% if page.url contains '/fi' %}
