Partners added to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,6 +86,23 @@
 			{% endif%}
 				<li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
         </ul>
+        <table class="partners">
+            <tr>
+                <td style="width:10%;">
+                </td>
+                <td>
+                    <img src="/images/aivoliitto-footer.png"/>
+                </td>
+                <td>
+                    <img src="/images/carbontrikes-footer.png"/>
+                </td>
+                <td>
+                    <img src="/images/trainerroad-footer.png"/>
+                </td>
+                <td style="width:10%;">
+                </td>
+            </tr>
+        </table>
         </div>
     </div>
     {% if site.animated_fins and site.triangleheader %}
