Partners links added, responsive footer test

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,13 +91,13 @@
                 <td style="width:10%;">
                 </td>
                 <td>
-                    <img src="/images/aivoliitto-footer.png"/>
+                    <a href="http://korvaamatonkovalevy.fi"><img src="/images/aivoliitto-footer.png"/></a>
                 </td>
                 <td>
-                    <img src="/images/carbontrikes-footer.png"/>
+                    <a href="http://carbontrikes.com"><img src="/images/carbontrikes-footer.png"/></a>
                 </td>
                 <td>
-                    <img src="/images/trainerroad-footer.png"/>
+                    <a href="http://trainerroad.com"><img src="/images/trainerroad-footer.png"/></a>
                 </td>
                 <td style="width:10%;">
                 </td>
