--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,23 +86,15 @@
 			{% endif%}
 				<li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
         </ul>
-        <table class="partners">
-            <tr>
-                <td style="width:10%;">
-                </td>
-                <td>
-                    <a href="http://korvaamatonkovalevy.fi"><img src="/images/aivoliitto-footer.png"/></a>
-                </td>
-                <td>
-                    <a href="http://carbontrikes.com"><img src="/images/carbontrikes-footer.png"/></a>
-                </td>
-                <td>
-                    <a href="http://trainerroad.com"><img src="/images/trainerroad-footer.png"/></a>
-                </td>
-                <td style="width:10%;">
-                </td>
-            </tr>
-        </table>
+        <div class="partners">
+            <a href="http://korvaamatonkovalevy.fi"><img src="/images/aivoliitto-footer.png"/></a>
+            &nbsp;
+            <a href="http://carbontrikes.com"><img src="/images/carbontrikes-footer.png"/></a>
+            &nbsp;
+            <a href="http://trainerroad.com"><img src="/images/trainerroad-footer.png"/></a>
+            &nbsp;
+            <a href="http://acute.fi"><img src="/images/vitec-footer.png"/></a>
+        </div>
         </div>
     </div>
     {% if site.animated_fins and site.triangleheader %}
