--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -89,6 +89,7 @@
         <div class="partners">
             <a href="http://korvaamatonkovalevy.fi"><img src="/images/aivoliitto-footer.png"/></a>
             <a href="http://carbontrikes.com"><img src="/images/carbontrikes-footer.png"/></a>
+            <a href="http://wheelenergy.com"><img src="/images/wheelenergy-footer.png"/></a>
             <a href="http://trainerroad.com"><img src="/images/trainerroad-footer.png"/></a>
             <a href="http://acute.fi"><img src="/images/vitec-footer.png"/></a>
         </div>
